--- a/src/index.html
+++ b/src/index.html
@@ -60,38 +60,40 @@
       </h1>
 
       <section class="stats">
-        <header class="stats__header">
-          <h2 class="visually-hidden">Статистика барбершопа</h2>
-          <p class="stats__slogan">Стрижка у нас - это выгодно!</p>
-          <p class="stats__intro">
-            Мужская стрижка требует точного подхода. Обратимся к статистике:
-          </p>
-          <small class="stats__legend stats__legend--top">
+        <div class="stats__wrapper">
+          <header class="stats__header">
+            <h2 class="visually-hidden">Статистика барбершопа</h2>
+            <p class="stats__slogan">Стрижка у нас - это выгодно!</p>
+            <p class="stats__intro">
+              Мужская стрижка требует точного подхода. Обратимся к статистике:
+            </p>
+            <small class="stats__legend stats__legend--top">
+              * - приведенные данные - ложь</small
+            >
+          </header>
+
+          <dl class="stats__list">
+            <div class="stats__item">
+              <dt class="stats__number">1&nbsp500 <sup>*</sup></dt>
+              <dd class="stats__description">рублей вложений</dd>
+            </div>
+            <div class="stats__item">
+              <dt class="stats__number">7&nbsp200 <sup>*</sup></dt>
+              <dd class="stats__description">секунд времени мастера</dd>
+            </div>
+            <div class="stats__item">
+              <dt class="stats__number">90&nbsp000 <sup>*</sup></dt>
+              <dd class="stats__description">постриженных волос</dd>
+            </div>
+            <div class="stats__item">
+              <dt class="stats__number">500&nbsp000 <sup>*</sup></dt>
+              <dd class="stats__description">лайков и комплиментов</dd>
+            </div>
+          </dl>
+          <small class="stats__legend stats__legennd--bottom">
             * - приведенные данные - ложь</small
           >
-        </header>
-
-        <dl class="stats__list">
-          <div class="stats__item">
-            <dt class="stats__number">1&nbsp500 <sup>*</sup></dt>
-            <dd class="stats__description">рублей вложений</dd>
-          </div>
-          <div class="stats__item">
-            <dt class="stats__number">7&nbsp200 <sup>*</sup></dt>
-            <dd class="stats__description">секунд времени мастера</dd>
-          </div>
-          <div class="stats__item">
-            <dt class="stats__number">90&nbsp000 <sup>*</sup></dt>
-            <dd class="stats__description">постриженных волос</dd>
-          </div>
-          <div class="stats__item">
-            <dt class="stats__number">500&nbsp000 <sup>*</sup></dt>
-            <dd class="stats__description">лайков и комплиментов</dd>
-          </div>
-        </dl>
-        <small class="stats__legend stats__legennd--bottom">
-          * - приведенные данные - ложь</small
-        >
+        </div>
       </section>
 
       <section class="advantages">
